--- a/src/app/components/list/list.component.html
+++ b/src/app/components/list/list.component.html
@@ -3,12 +3,9 @@
         <div class="card">
             <div class="card-header">Užduočių sąrašas</div>
             <div class="card-body">
-                <ul class="list-group" >
-                    <li class="list-group-item" *ngFor="let item of list; let i=index">
-                       {{i+1}}. {{ item.name }}, svarbumas: {{item.importance}} <button class="btn btn-danger float-end" (click)="removeTask(i)">Ištrinti</button>
-                    </li>
-                    
-                </ul>
+                <div class="row">
+                    <app-list-item *ngFor="let task of list; let i=index" class="col-md-4" [task]="task" [index]="i"></app-list-item>
+                </div>
             </div>
         </div>
     </div>
